--- a/src/app/auth/set-new-login-pwd/set-new-login-pwd.component.html
+++ b/src/app/auth/set-new-login-pwd/set-new-login-pwd.component.html
@@ -19,12 +19,12 @@
     </div>
     <div class="form-group row my-4">
       <div class="col-12">
-        <button class="btn btn-orange btn-block m-0 w-100" type="submit">Confirm</button>
+        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onConfirm()">Confirm</button>
       </div>
     </div>
     <div class="form-group mb-0 row">
       <div class="col-12">
-        <button class="btn btn-blue btn-block m-0 w-100" type="submit">Return</button>
+        <button class="btn btn-blue btn-block m-0 w-100" (click)="onReturn()">Return</button>
       </div>
     </div>
 
