--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,53 +1,54 @@
-<div class="login-main"> 
+<div class="login-main">
   <div class="logo text-left">
-      <span class="text-white">Register an account</span>
+    <span class="text-white">Register an account</span>
   </div>
-<form class="theme-form">
-  <div class="form-group row">
-    <div class="col-3">
-      <label class="col-form-label text-white" for="areaCode">Area Code</label>
-    <input class="form-control" type="text" id="areaCode" name="areaCode" required placeholder="+44">
+  <form class="theme-form" [formGroup]="registerForm">
+    <div class="form-group row">
+      <div class="col-3">
+        <label class="col-form-label text-white" for="areaCode">Area Code</label>
+        <input class="form-control" formControlName="areaCode" type="text" id="areaCode" name="areaCode" required placeholder="+44">
+      </div>
+      <div class="col-9">
+        <label class="col-form-label text-white" for="phoneNumber">Phone Number</label>
+        <input class="form-control" formControlName="phoneNumber" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
+      </div>
     </div>
-    <div class="col-9">
-      <label class="col-form-label text-white" for="phoneNumber">Phone Number</label>
-    <input class="form-control" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
+    <div class="form-group">
+      <label class="col-form-label text-white">Verification Code</label>
+      <input class="form-control" formControlName="verificationCode" type="password" name="login[password]" required="" placeholder="Verification Code">
+      <div class="show-hide"><span class="show"> </span></div>
     </div>
-  </div>
-  <div class="form-group">
-    <label class="col-form-label text-white">Verification Code</label>
-    <input class="form-control" type="password" name="login[password]" required="" placeholder="Verification Code">
-    <div class="show-hide"><span class="show">                         </span></div>
-  </div>
-  <div class="form-group">
+    <div class="form-group">
       <label class="col-form-label text-white">Password</label>
-      <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+      <input class="form-control" formControlName="password" type="password" name="login[password]" required="" placeholder="*********">
       <div class="show-hide">
-            <i class="bi bi-eye-slash-fill"></i>                        
-    </div>
+        <i class="bi bi-eye-slash-fill"></i>
+      </div>
     </div>
     <div class="form-group mt-3 mb-4">
       <div class="checkbox p-0 d-flex align-items-center">
-        <input id="checkbox1" type="checkbox" class="custom-checkbox">
+        <input id="checkbox1" formControlName="termsAndConditions" type="checkbox" class="custom-checkbox">
         <label class="text-white font-sm" for="checkbox1">I have read and agreed to the Terms and Conditions</label>
       </div>
     </div>
-  <div class="form-group mb-0 row my-4">
+    <div class="form-group mb-0 row my-4">
       <div class="col-12">
-          <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onRegister()">Register</button>
+        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onRegister()">Register</button>
       </div>
     </div>
-  <div class="text-muted my-3">
+    <div class="text-muted my-3">
       <div class="d-flex align-items-center">
-          <hr class="flex-grow-1 custom-hr">
-          <span class="mx-2 custom-text-secondary"> OR </span>
-          <hr class="flex-grow-1 custom-hr">
-      </div>
-  </div>
-  <div class="form-group mb-0 row">
-      <div class="col-12">
-          <button class="btn btn-blue btn-block m-0 w-100" type="button" (click)="onBack()">Already have an account,back to log in</button>
+        <hr class="flex-grow-1 custom-hr">
+        <span class="mx-2 custom-text-secondary"> OR </span>
+        <hr class="flex-grow-1 custom-hr">
       </div>
     </div>
- 
-</form>
+    <div class="form-group mb-0 row">
+      <div class="col-12">
+        <button class="btn btn-blue btn-block m-0 w-100" type="button" (click)="onBack()">Already have an account,back
+          to log in</button>
+      </div>
+    </div>
+
+  </form>
 </div>
