--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -2,20 +2,20 @@
   <div class="logo text-left">
     <span class="text-white">Retrieve password ?</span>
   </div>
-  <form class="theme-form">
+  <form class="theme-form" [formGroup]="form">
     <div class="form-group row">
       <div class="col-3">
         <label class="col-form-label text-white" for="areaCode">Area Code</label>
-        <input class="form-control" type="text" id="areaCode" name="areaCode" required placeholder="+44">
+        <input class="form-control" formControlName="areaCode" type="text" id="areaCode" name="areaCode" required placeholder="+44">
       </div>
       <div class="col-9">
         <label class="col-form-label text-white" for="phoneNumber">Phone Number</label>
-        <input class="form-control" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
+        <input class="form-control" formControlName="phone" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
       </div>
     </div>
     <div class="form-group">
       <label class="col-form-label text-white">Verification Code</label>
-      <input class="form-control" type="password" name="login[password]" required="" placeholder="Verification Code">
+      <input class="form-control" formControlName="smsOtp" type="password" name="login[password]" required="" placeholder="Verification Code">
       <div class="show-hide"><span class="show"> </span></div>
     </div>
 
