landing ui issue fix userdashboard

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -62,6 +62,12 @@
 .needs-validation .invalid-tooltip {
   top: 10px;
   right: 10px; }
+  .form-control{
+    color:#fff;
+  }
+.input-has-value{
+  color:#fff;
+}
 
 /**=====================
     25. Authentication CSS Ends
