--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -109,6 +109,13 @@
   right: 10px;
 }
 
+.form-control{
+  color:#fff;
+}
+.input-has-value{
+color:#fff;
+}
+
 /**=====================
     25. Authentication CSS Ends
 ==========================**/
