--- a/src/app/user-dashboard/user-dashboard.component.scss
+++ b/src/app/user-dashboard/user-dashboard.component.scss
@@ -13,6 +13,13 @@
         background: linear-gradient(to bottom, #242E48, #19233F);
          color: #fff;
          border: 2px solid #393C49;
+         .card-header{
+            border-bottom: 2px solid #363F54;
+         }
+    }
+    .nav-link{
+        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+        font-size: 12px;
     }
 }
 
@@ -26,8 +33,27 @@ li:not(:last-child)::after{
     position: absolute;
     right: 0px;
     top: 50%;
-    transform: translateX(24px) translateY(-8px);
+    transform: translateX(0px) translateY(-8px);
     width: 1px;
     height: 40%;
     background-color: #D9DBE1;
+}
+
+.table > :not(caption) > * > *{
+    color: #96A1C2;
+}
+.table td{
+    background-color: transparent;
+}
+.custom-table thead{
+    background-color: #17203A;
+}
+.myCard p{
+    font-size: 12px;
+}
+.myCard .arrow{
+    padding:12px;
+}
+.myCard .bg-primary-dark {
+    background-color:#2E335B;
 }
