--- a/src/app/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/auth/forgot-password/forgot-password.component.scss
@@ -33,6 +33,10 @@
 }
 .form-control{
     border: 2px solid #363F54;
+    color:#fff;
+}
+.input-has-value{
+color:#fff;
 }
 .carousel-indicators{
     bottom: 25%;
