--- a/src/app/auth/set-new-login-pwd/set-new-login-pwd.component.scss
+++ b/src/app/auth/set-new-login-pwd/set-new-login-pwd.component.scss
@@ -194,6 +194,13 @@
   .needs-validation .invalid-tooltip {
     top: 10px;
     right: 10px; }
+
+    .form-control{
+      color:#fff;
+    }
+  .input-has-value{
+    color:#fff;
+  }
   
   /**=====================
       25. Authentication CSS Ends
