--- a/src/app/landing/about-us/about-us.component.html
+++ b/src/app/landing/about-us/about-us.component.html
@@ -7,12 +7,8 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="case-block-inner">
                         <h4>About Cuttle Card</h4>
-                        <p>The Cuttle Card credit card is operated by King Dynasty Capital Limited.Cuttle Card Credit
-                            Card has a distinct legal operating entity, information security standards, and KYC/AML
-                            guidelines.</p>
-                        <p>The PassTo credit card is operated by King Dynasty Capital Limited. Cuttle Card Credit Card
-                            has a distinct legal operating entity, information security standards, and KYC/AML
-                            guidelines.</p>
+                        <p>Cuttle Credit Card is operated by Cuttle Card Co., Ltd., which has a clear and legal operating entity and meets information security requirements and KYC/AML standards.</p>
+                       
                         <div class="mt-4 button_resp">
                             <a href="#" class="primary-button-light button-sm">Know More
                                 <span>
