--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,8 +3,10 @@
 	<div class="container">
 		<div class="row">
 			<!-- Column 1 Start -->
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<div class="footer-logo">
+			<div class="col-md-3 col-sm-6 col-xs-12">
+                <h3>Help Center</h3>
+			
+				<!-- <div class="footer-logo">
 					<img src="assets/img/logo.png" alt="footer-logo">
 					<p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 					<div class="footer-social-icons mt-4">
@@ -40,13 +42,55 @@
 						
 						</ul>
 					</div>					
-				</div>
+				</div> -->
 			</div>
 			<!-- Column 1 End -->
 
 			<!-- Column 2 Start -->
 			<div class="col-md-3 col-sm-6 col-xs-12">
-				<h3>Quick Links</h3>
+                <h3>Reach Us</h3>
+				<ul class="footer-list px-0">
+					<li><a href="#"> 
+                        <span>
+                            <svg width="26" height="21" viewBox="0 0 26 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g filter="url(#filter0_d_401_214)">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M16.939 0C18.28 0 19.57 0.53 20.519 1.481C21.469 2.43 22 3.71 22 5.05V12.95C22 15.74 19.73 18 16.939 18H7.06C4.269 18 2 15.74 2 12.95V5.05C2 2.26 4.259 0 7.06 0H16.939ZM18.5301 6.54033L18.6101 6.46033C18.8491 6.17033 18.8491 5.75033 18.5991 5.46033C18.4601 5.31133 18.2691 5.22033 18.0701 5.20033C17.8601 5.18933 17.6601 5.26033 17.5091 5.40033L13.0001 9.00033C12.4201 9.48133 11.5891 9.48133 11.0001 9.00033L6.50005 5.40033C6.18905 5.17033 5.75905 5.20033 5.50005 5.47033C5.23005 5.74033 5.20005 6.17033 5.42905 6.47033L5.56005 6.60033L10.1101 10.1503C10.6701 10.5903 11.3491 10.8303 12.0601 10.8303C12.7691 10.8303 13.4601 10.5903 14.0191 10.1503L18.5301 6.54033Z" fill="#D6B1FF"/>
+                                </g>
+                                <defs>
+                                <filter id="filter0_d_401_214" x="-2" y="0" width="28" height="26" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                                <feOffset dy="4"/>
+                                <feGaussianBlur stdDeviation="2"/>
+                                <feComposite in2="hardAlpha" operator="out"/>
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_401_214"/>
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_401_214" result="shape"/>
+                                </filter>
+                                </defs>
+                                </svg>
+                                
+                        </span>
+                        contact&#64;cuttlecard.com</a></li>
+					<li><a href="#">
+                        <span>
+                            <svg width="14" height="20" viewBox="0 0 14 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.00845931 8.69455C0.00845931 8.07591 0.015909 7.45726 0.0233933 6.83575L0.0233934 6.83574C0.0271878 6.52065 0.030991 6.20482 0.0338368 5.88788C0.0338368 2.48258 2.16556 -0.000244141 5.10936 -0.000244141H8.89063C11.8344 -0.000244141 13.9662 2.48258 13.9662 5.88788C13.9915 7.25196 14 8.61605 14 9.98994C14 11.3638 13.9915 12.7475 13.9662 14.1116C13.9662 17.5169 11.8344 19.9998 8.89063 19.9998H5.10936C2.16556 19.9998 0.0338368 17.5169 0.0338368 14.1018C0.0169184 12.8162 0 11.5012 0 10.1666L0.00845931 8.69455ZM8.27973 17.6398V17.7998C8.27973 18.4734 7.71653 18.9998 6.99973 18.9998C6.29999 18.9998 5.71973 18.4734 5.71973 17.7998V17.6398C5.71973 16.9838 6.29999 16.4398 6.99973 16.4398C7.71653 16.4398 8.27973 16.9838 8.27973 17.6398ZM2.01671 6.44316C2.01136 6.84714 2.00604 7.24926 2.00604 7.65137L2 8.6082C2 9.47571 2.01208 10.3305 2.02417 11.1661C2.02417 13.3859 3.54683 14.9998 5.64955 14.9998H8.35045C10.4532 14.9998 11.9758 13.3859 11.9758 11.1725C11.994 10.2858 12 9.38641 12 8.49338C12 7.60034 11.994 6.71369 11.9758 5.82704C11.9758 3.61359 10.4532 1.99976 8.35045 1.99976H5.64955C3.54683 1.99976 2.02417 3.61359 2.02417 5.82704C2.02214 6.03305 2.01942 6.23834 2.01671 6.44316Z" fill="#D6B1FF"/>
+                                </svg>
+                                
+                        </span>
+                        (852) 8170 044</a></li>
+					<li><a href="#"> 
+                        <span>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.03 2.00002C14.29 2.01002 16.45 2.91002 18.03 4.49002C19.62 6.08002 20.51 8.23002 20.5 10.46V10.51C20.44 13.54 18.74 16.33 16.62 18.51C15.42 19.74 14.09 20.83 12.64 21.75C12.25 22.08 11.68 22.08 11.29 21.75C9.14 20.35 7.24 18.59 5.7 16.54C4.35 14.76 3.58 12.62 3.5 10.39C3.52 5.74002 7.34 1.99002 12.03 2.00002ZM12.03 13.2597C12.74 13.2597 13.42 12.9897 13.92 12.4997C14.44 11.9897 14.731 11.3107 14.731 10.5997C14.731 9.11967 13.52 7.92967 12.03 7.92967C10.54 7.92967 9.33997 9.11967 9.33997 10.5997C9.33997 12.0607 10.52 13.2397 12 13.2597H12.03Z" fill="#D6B1FF"/>
+                                </svg>
+                                
+                        </span>
+                        Hong Kong</a></li>
+		
+				</ul>
+				<!-- <h3>Quick Links</h3>
 				<ul class="footer-list px-0">
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Blogs</a></li>
@@ -55,25 +99,25 @@
 					<li><a href="#">Careers</a></li>
 					<li><a href="#">Sales Services</a></li>
 					<li><a href="#">Market Research</a></li>				
-				</ul>
+				</ul> -->
 			</div>
 			<!-- Column 2 End -->
 
 			<!-- Column 3 Start -->
 			<div class="col-md-2 col-sm-6 col-xs-12">
-				<h3>Services</h3>
+				<!-- <h3>Services</h3>
 				<ul class="footer-list px-0">
 					<li><a href="#">UI/UX Design</a></li>
 					<li><a href="#">App Development</a></li>
 					<li><a href="#">Web Development</a></li>
 					<li><a href="#">Quality Assurance</a></li>
 					<li><a href="#">Machine Learning</a></li>			
-				</ul>
+				</ul> -->
 			</div>
 
 
             <div class="col-md-3 col-sm-6 col-xs-12">
-				<h3>Reach Us</h3>
+				<!-- <h3>Reach Us</h3>
 				<ul class="footer-list px-0">
 					<li><a href="#"> 
                         <span>
@@ -114,7 +158,7 @@
                         </span>
                         Noida, Uttar Pradesh</a></li>
 		
-				</ul>
+				</ul> -->
 			</div>
 			<!-- Column 3 End -->	
 
@@ -131,7 +175,7 @@
                         
                         <ul class="nav footer-menu">
                             <li class="nav-item">
-                                <p>© 2018 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
+                                <p class="mb-0">© 2018 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
                             </li>
                           </ul>
                     </div>
