collateral Injection, auth resposnive, landing ui issue fix

--- a/src/app/shared/faq/faq.component.html
+++ b/src/app/shared/faq/faq.component.html
@@ -76,6 +76,12 @@
 						
 				</div>
 			</div>	
+      <div class="col-md-12 col-sm-6 col-xs-12">
+        <div class="mt-5 text-center button_resp">
+          <a href="#" class="primary-button-light button-msm">Customer Services
+          </a>
+      </div>
+      </div>
 		</div>
 	</div>
 </div>
