--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -175,7 +175,7 @@
                         
                         <ul class="nav footer-menu">
                             <li class="nav-item">
-                                <p class="mb-0">© 2018 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
+                                <p class="mb-0">© 2024 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
                             </li>
                           </ul>
                     </div>
@@ -191,7 +191,7 @@
                                
                                 Privacy Policy</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">
                                  
                                     Sitemap</a>
@@ -200,7 +200,7 @@
                                 <a class="nav-link" href="#">
                                  
                                     Disclaimer</a>
-                              </li>
+                              </li> -->
                           </ul>
                     </div>
                 </div>
