--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -71,7 +71,7 @@
                                 <a class="nav-link" (click)="onAboutUs()">About us</a>
                             </li>
                             <li class="nav-item d-block d-sm-block d-md-block d-lg-none">
-                                <a class="nav-link" (click)="onAboutUs()">Login</a>
+                                <a class="nav-link" (click)="redirectTo()">Login</a>
                             </li>
                             <li class="nav-item d-block d-sm-block d-md-block d-lg-none">
                                 <a class="nav-link" (click)="onAboutUs()">Apply Now</a>
