--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -10,13 +10,13 @@
       </div>
       <div class="col-9">
         <label class="col-form-label text-white" for="phoneNumber">Phone Number</label>
-        <input class="form-control" formControlName="phoneNumber" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
+        <input class="form-control" formControlName="phone" type="text" id="phoneNumber" name="phoneNumber" required placeholder="7457413014">
       </div>
     </div>
     <div class="form-group">
       <label class="col-form-label text-white">Verification Code</label>
       <input class="form-control" formControlName="verificationCode" type="password" name="login[password]" required="" placeholder="Verification Code">
-      <div class="show-hide"><span class="show"> </span></div>
+      <div class="show-hide"><a (click)="onSendOTP()"><span class="show"> </span></a></div>
     </div>
     <div class="form-group">
       <label class="col-form-label text-white">Password</label>
@@ -33,7 +33,7 @@
     </div>
     <div class="form-group mb-0 row my-4">
       <div class="col-12">
-        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onRegister()">Register</button>
+        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onRegister()" [disabled]="registerForm.valid">Register</button>
       </div>
     </div>
     <div class="text-muted my-3">
