--- a/src/app/user-dashboard/collateral-injection/collateral-injection.component.scss
+++ b/src/app/user-dashboard/collateral-injection/collateral-injection.component.scss
@@ -77,6 +77,9 @@ color:#fff;
 	 .card-header{
 		border-bottom: 2px solid #363F54;
 	 }
+     .primary-button {
+        cursor: pointer !important;
+     }
 }
 .section-block{
     background-color: #fff;
