responsive for collaterl injeciton, user dashboard

--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -985,7 +985,7 @@ i) Animations
 .custom-card{
 	background: linear-gradient(to bottom, #242E48, #19233F);
 	 color: #FAFAFA !important;
-	 border: 2px solid #393C49;
+	 border: 2px solid #393C49 !important;
 	 .card-header{
 		border-bottom: 2px solid #363F54;
 	 }
