--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -74,7 +74,7 @@
                                 <a class="nav-link" (click)="redirectTo()">Login</a>
                             </li>
                             <li class="nav-item d-block d-sm-block d-md-block d-lg-none">
-                                <a class="nav-link" (click)="onAboutUs()">Apply Now</a>
+                                <a class="nav-link" (click)="redirectToRegister()">Apply Now</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -94,7 +94,7 @@
 
                         <div class="d-flex d-none d-lg-block">
                             <button (click)="redirectTo()" class="btn btn-dark-cuttle" >Login</button>
-                            <button class="btn btn-light-cuttle" >Apply Now</button>
+                            <button (click)="redirectToRegister()" class="btn btn-light-cuttle" >Apply Now</button>
                         </div>
                        </ng-container>
                        <ng-template #dashboard>
