--- a/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
+++ b/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-10 col-lg-10 col-sm-10 col-xs-12 m-3 mx-auto">
+            <div class="col-12 col-md-12 col-lg-10 col-sm-10 col-xs-12 m-3 mx-auto">
                 <div class="card custom-card">
                     <div class="card-header pt-4 border-0">
                         <h5 class="text-white">Collateral Injection</h5>
@@ -37,7 +37,7 @@
                                       <div class="tab-content" id="pills-tabContent">
                                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                                             <div class="row">
-                                                <div class="col-6 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                                <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
                                                     <form class="theme-form" >
                                                         <div class="form-group">
                                                             <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
@@ -51,7 +51,7 @@
                                                       </form>
                                                 </div>
 
-                                                <div class="col-6 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                                <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
                                                     <form class="theme-form" >
                                                         <div class="form-group">
                                                             <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
@@ -80,7 +80,7 @@
                                         </div>
                                         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                                             <div class="row">
-                                                <div class="col-6 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                                <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
                                                     <form class="theme-form" >
                                                         <div class="form-group">
                                                             <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
@@ -94,7 +94,7 @@
                                                       </form>
                                                 </div>
 
-                                                <div class="col-6 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                                <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
                                                     <form class="theme-form" >
                                                         <div class="form-group">
                                                             <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
