--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -7,7 +7,7 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-xl-12 box-col-12 mb-3">
-                                <div class="card custom-card">
+                                <div class="card custom-card py-3">
                                     <div class="card-body d-flex flex-column flex-md-row justify-content-between align-items-center">
                                         <div class="card-text mb-3 mb-md-0">
                                             <p>Credit Available</p>
@@ -23,7 +23,7 @@
                                 </div>
                             </div>
                             <div class="col-xl-12 box-col-12">
-                                <div class="card custom-card">
+                                <div class="card custom-card card-management">
                                     <div class="card-body flex-column flex-md-row justify-content-between align-items-center">
                                         <div class="card-text mb-3">
                                             <h5 class="card-title">Card Management</h5>
@@ -171,8 +171,8 @@
 
                                     <div class="card custom-card m-3">
                                         <div class="card-body flex-column flex-md-row justify-content-between align-items-center">
-                                            <div class="card-text d-flex">
-                                                <p class="mx-2 my-0">Daily Spending Limit : <span class="fw-bold">$259.75</span></p>
+                                            <div class="d-flex spend-limit">
+                                                <p class="mx-2">Daily Spending Limit : <span class="fw-bold">$259.75</span></p>
                                                 <p class="mx-2 my-0">Daily Spending Limit : <span class="fw-bold">$259.75</span></p>
                                                 </div>
                                                 
@@ -184,10 +184,10 @@
                                 <div class="card custom-card">
                                     <div class="card-header py-3">
                                         <div class="row align-items-center">
-                                            <div class="col-xl-9">
+                                            <div class="col-xl-9 col-7">
                                                 <h6>Transaction Record </h6>
                                             </div>
-                                            <div class="col-xl-3 d-flex justify-content-end">
+                                            <div class="col-xl-3 col-5 text-end">
                                                 <a href="#" class="primary-button button-xs">All Records</a>
                                             </div>
                                         </div>
@@ -268,7 +268,7 @@
                                             </div>
                                         </div>
                                         <div class="row align-items-center">
-                                           <div class="col-12 col-md-6 mb-3">
+                                           <div class="col-6 col-md-12 col-lg-6 mb-3">
                                             <div class="row align-items-center">
                                                 <div class="col-3 px-0 ps-1">
                                                     <div class="bg-primary-dark rounded-circle d-flex align-items-center just-content-center">
@@ -283,7 +283,7 @@
                                                 </div>
                                             </div>
                                            </div>
-                                           <div class="col-12 col-md-6 mb-3">
+                                           <div class="col-6 col-md-12 col-lg-6 mb-3">
                                             <div class="row align-items-center">
                                                 <div class="col-3 px-0 ps-1">
                                                     <div class="bg-primary-dark rounded-circle d-flex align-items-center just-content-center">
