--- a/src/app/user-dashboard/user-dashboard.component.scss
+++ b/src/app/user-dashboard/user-dashboard.component.scss
@@ -50,3 +50,64 @@ li:not(:last-child)::after{
 .myCard .bg-primary-dark {
     background-color:#2E335B;
 }
+
+.spend-limit{
+    display: flex;
+}
+.spend-limit p{
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 767.98px) { 
+    .user-dashboard{
+        padding:30px 0px 30px 0px;
+    }
+    .spend-limit{
+        flex-wrap: wrap;
+        p{
+            font-size: 14px;
+        }
+    }
+    li:not(:last-child)::after{
+        transform: translateX(0px) translateY(5px);
+    }
+    .card-management .card-text{
+        margin-bottom: 20px !important;
+    }
+    .user-dashboard .nav-link{
+        padding-top:0px !important;
+    }
+    .custom-table {
+        th{
+            font-size: 14px;
+        }
+        td{
+            font-size: 12px;
+        }
+    }
+    .custom-card .arrow{
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media (min-width: 768px) { 
+    
+.spend-limit p{
+    flex: 0 0 50%;
+}
+
+    
+}
+@media (min-width: 992px) { 
+    .spend-limit p{
+        margin-bottom: 0px !important;
+    }
+ }
+
+ @media (min-width: 768px) and (max-width: 991.98px) { 
+    li:not(:last-child)::after{
+        transform: translateX(0px) translateY(8px);
+    }
+ }
