--- a/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
+++ b/src/app/user-dashboard/collateral-injection/collateral-injection.component.html
@@ -1,142 +1,127 @@
 <div class="row">
   <div class="col-md-12">
-    <nav
-      style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg width='6' height='10' viewBox='0 0 6 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.528758 0.528636C0.789108 0.268287 1.21122 0.268287 1.47157 0.528636L5.47157 4.52864C5.73192 4.78899 5.73192 5.2111 5.47157 5.47145L1.47157 9.47145C1.21122 9.7318 0.789108 9.7318 0.528758 9.47145C0.268409 9.2111 0.268409 8.78899 0.528758 8.52864L4.05735 5.00004L0.528758 1.47145C0.268409 1.2111 0.268409 0.788986 0.528758 0.528636Z' fill='white'/%3E%3C/svg%3E%0A&#34;);"
-      aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Credit card List</a></li>
-        <li class="breadcrumb-item active text-white fw-bold" aria-current="page">Apply for Platinum
-        </li>
-      </ol>
-    </nav>
+      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg width='6' height='10' viewBox='0 0 6 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.528758 0.528636C0.789108 0.268287 1.21122 0.268287 1.47157 0.528636L5.47157 4.52864C5.73192 4.78899 5.73192 5.2111 5.47157 5.47145L1.47157 9.47145C1.21122 9.7318 0.789108 9.7318 0.528758 9.47145C0.268409 9.2111 0.268409 8.78899 0.528758 8.52864L4.05735 5.00004L0.528758 1.47145C0.268409 1.2111 0.268409 0.788986 0.528758 0.528636Z' fill='white'/%3E%3C/svg%3E%0A&#34;);"
+          aria-label="breadcrumb">
+          <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">Credit card List</a></li>
+              <li class="breadcrumb-item active text-white fw-bold" aria-current="page">Apply for Platinum
+              </li>
+          </ol>
+      </nav>
   </div>
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-12 col-md-12 col-lg-10 col-sm-10 col-xs-12 m-3 mx-auto">
-      <div class="card custom-card">
-        <div class="card-header pt-4 border-0">
-          <h5 class="text-white">Collateral Injection</h5>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-12 col-lg-12 col-sm-12 col-xs-12">
-              <div class="collateral-injection">
-                <ul class="nav nav-underline mb-3" id="pills-tab" role="tablist">
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
-                      data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
-                      aria-selected="true">Scan to pay</button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
-                      data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
-                      aria-selected="false">Connect Wallet</button>
-                  </li>
-                </ul>
-                <div class="tab-content" id="pills-tabContent">
-                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
-                    aria-labelledby="pills-home-tab" tabindex="0">
-                    <div class="row">
-                      <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
-                        <form class="theme-form">
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
-                            <input class="form-control" type="text" id="paymentNetwork"
-                              required placeholder="Mainnet">
-                          </div>
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">Expected Arrival</label>
-                            <input class="form-control" type="text" id="expectedArrival"
-                              required placeholder="Please Enter Amount">
-                            <div class="show-hide"><span class="show"> </span></div>
-                          </div>
-                        </form>
-                      </div>
-
-                      <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
-                        <form class="theme-form">
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
-                            <input class="form-control" type="text" id="youPay"
-                              required placeholder="Please Enter Amount">
-                            <div class="show-hide"><span class="show"> </span></div>
-                          </div>
-                          <div class="form-group mb-0">
-                            <label class="col-form-label text-white" for="exampleFormControlTextarea4">Example
-                              textarea</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea4" rows="5"></textarea>
-                          </div>
-                          <div class="form-group mb-0 row my-4">
-                            <div class="col-md-10 offset-md-2">
-                              <div class="row">
-                                <div class="col-12 col-md-6 col-lg-6">
-                                  <button class="btn btn-blue btn-block m-0 w-100">Back</button>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-6">
-                                  <button class="btn btn-orange btn-block m-0 w-100" type="button" (click)="showModal('SCAN_PAY')">Next Step </button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
-                    tabindex="0">
-                    <div class="row">
-                      <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
-                        <form class="theme-form">
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
-                            <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork"
-                              name="paymentNetwork" required placeholder="Mainnet">
-                          </div>
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">Expected Arrival</label>
-                            <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork"
-                              name="paymentNetwork" required placeholder="Please Enter Amount">
-                            <div class="show-hide"><span class="show"> </span></div>
-                          </div>
-                        </form>
-                      </div>
-
-                      <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
-                        <form class="theme-form">
-                          <div class="form-group">
-                            <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
-                            <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork"
-                              name="paymentNetwork" required placeholder="Please Enter Amount">
-                            <div class="show-hide"><span class="show"> </span></div>
-                          </div>
-                          <div class="form-group mb-0">
-                            <label class="col-form-label text-white" for="exampleFormControlTextarea4">Example
-                              textarea</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea4" rows="5"></textarea>
-                          </div>
-                          <div class="form-group mb-0 row my-4">
-                            <div class="col-md-10 offset-md-2">
-                              <div class="row">
-                                <div class="col-12 col-md-6 col-lg-6">
-                                  <button class="btn btn-blue btn-block m-0 w-100">Back</button>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-6">
-                                  <button class="btn btn-orange btn-block m-0 w-100" type="button" (click)="showModal('WALLET')">Next Step </button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+      <div class="col-12 col-md-12 col-lg-10 col-sm-10 col-xs-12 m-3 mx-auto">
+          <div class="card custom-card">
+              <div class="card-header pt-4 border-0">
+                  <h5 class="text-white">Collateral Injection</h5>
               </div>
-            </div>
+              <div class="card-body">
+                  <div class="row">   
+                      <div class="col-12 col-lg-12 col-sm-12 col-xs-12">
+                          <div class="collateral-injection">
+                              <ul class="nav nav-underline mb-3" id="pills-tab" role="tablist">
+                                  <li class="nav-item" role="presentation">
+                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Scan to pay</button>
+                                  </li>
+                                  <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Connect Wallet</button>
+                                  </li>
+                                </ul>
+                                <div class="tab-content" id="pills-tabContent">
+                                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+                                      <div class="row">
+                                          <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                              <form class="theme-form" >
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
+                                                      <input class="form-control" type="text" id="paymentNetwork" required placeholder="Mainnet">
+                                                  </div>
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">Expected Arrival</label>
+                                                      <input class="form-control" type="text" id="expectedArrival" required placeholder="Please Enter Amount">
+                                                      <div class="show-hide"><span class="show"> </span></div>
+                                                  </div>
+                                                </form>
+                                          </div>
+
+                                          <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                              <form class="theme-form" >
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
+                                                      <input class="form-control"  type="text" id="youPay"  required placeholder="Please Enter Amount">
+                                                      <div class="show-hide"><span class="show"> </span></div>
+                                                  </div>
+                                                  <div class="form-group mb-0">
+                                                      <label  class="col-form-label text-white" for="exampleFormControlTextarea4">Example textarea</label>
+                                                      <textarea class="form-control" id="exampleFormControlTextarea4" rows="5"></textarea>
+                                                    </div>
+                                                    <div class="form-group mb-0 row my-4">
+                                                      <div class="col-md-10 offset-md-2">
+                                                          <div class="row">
+                                                              <div class="col-12 col-md-6 col-lg-6">
+                                                                  <button class="btn btn-blue btn-block m-0 w-100" type="submit">Back</button>
+                                                                </div>
+                                                                <div class="col-12 col-md-6 col-lg-6">
+                                                                  <button class="btn btn-orange btn-block m-0 w-100" type="button" (click)="showModal('SCAN_PAY')">Next Step </button>
+                                                                </div>
+                                                          </div>
+                                                      </div>
+                                                    </div>
+                                                </form>
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+                                      <div class="row">
+                                          <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                              <form class="theme-form" >
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">Payment Network</label>
+                                                      <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork" name="paymentNetwork" required placeholder="Mainnet">
+                                                  </div>
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">Expected Arrival</label>
+                                                      <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork" name="paymentNetwork" required placeholder="Please Enter Amount">
+                                                      <div class="show-hide"><span class="show"> </span></div>
+                                                  </div>
+                                                </form>
+                                          </div>
+
+                                          <div class="col-12 col-lg-6 col-sm-6 col-xs-6 login-main">
+                                              <form class="theme-form" >
+                                                  <div class="form-group">
+                                                      <label class="col-form-label text-white" for="phoneNumber">You Pay</label>
+                                                      <input class="form-control" formControlName="paymentNetwork" type="text" id="paymentNetwork" name="paymentNetwork" required placeholder="Please Enter Amount">
+                                                      <div class="show-hide"><span class="show"> </span></div>
+                                                  </div>
+                                                  <div class="form-group mb-0">
+                                                      <label  class="col-form-label text-white" for="exampleFormControlTextarea4">Example textarea</label>
+                                                      <textarea class="form-control" id="exampleFormControlTextarea4" rows="5"></textarea>
+                                                    </div>
+                                                    <div class="form-group mb-0 row my-4">
+                                                      <div class="col-md-10 offset-md-2">
+                                                          <div class="row">
+                                                              <div class="col-12 col-md-6 col-lg-6">
+                                                                  <button class="btn btn-blue btn-block m-0 w-100" type="submit">Back</button>
+                                                                </div>
+                                                                <div class="col-12 col-md-6 col-lg-6">
+                                                                  <button class="btn btn-orange btn-block m-0 w-100" type="button" (click)="showModal('WALLET')">Next Step </button>
+                                                                </div>
+                                                          </div>
+                                                      </div>
+                                                    </div>
+                                                </form>
+                                          </div>
+                                      </div>
+                                  </div>
+                                </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
   </div>
 </div>
