footer menu alignment issue chekcbox color changed

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -169,18 +169,18 @@
 
 		<!-- Footer Bar Start -->
 		<div class="footer-bar">
-			<div class="contaion">
+			<div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         
                         <ul class="nav footer-menu">
                             <li class="nav-item">
-                                <p class="mb-0">© 2024 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
+                                <p class="mb-0 px-0 nav-link">© 2024 <span class="primary-color">Cuttle Card</span>. All Rights Reserved.</p>
                             </li>
                           </ul>
                     </div>
                     <div class="col-md-6">
-                        <ul class="nav footer-menu">
+                        <ul class="nav footer-menu justify-content-start justify-content-lg-end">
                             <li class="nav-item">
                               <a class="nav-link" href="#"> 
                                 
